# discord-bot

./: Dockerfile  docker-compose.yaml  flake.nix  pyproject.toml
.github/workflows/: build.yaml
bmt_discord_bot/: __init__.py  __main__.py  database.py
bmt_discord_bot/cogs/: auto_join_threads.py  copycat.py  core.py  math.py  reminders.py  threads.py  verified.py  viraj.py  welcome.py
bmt_discord_bot/lib/: context.py  formats.py  pagination.py  time.py
bmt_discord_bot/migrations/: 0001_reminders.sql  0002_math.sql  0002_math_down.sql  0003_copycat.sql  0003_copycat_down.sql  0003_thread_subscriptions.sql  0003_thread_subscriptions_down.sql  0003_welcome.sql  0003_welcome_down.sql  0004_reminder_allowed_mentions.sql  0004_reminder_allowed_mentions_down.sql
